--- a/css/conversion.css
+++ b/css/conversion.css
@@ -51,11 +51,40 @@ img {
 #convert_form {
   top: 12rem;
   display: block;
-  margin-top: 0em;
+  margin-top: 20px;
 }
 
 input {
   outline: none;
 }
 
-/*              --------------------                  */
+#cnumber,
+#cfrom,
+#cto {
+  width: 150px;
+  margin-left: 10px;
+  margin-right: 10px;
+  height: 30px;
+}
+
+.convertbtn {
+  letter-spacing: 3px;
+  width: 100px;
+  height: 30px;
+}
+
+.results {
+  width: 100%;
+  margin-top: 10px;
+  margin-right: 20px;
+  letter-spacing: 4px;
+  font-size: 25px;
+  padding: 0px, 0px;
+  color: black;
+}
+
+.hidden {
+  display: none;
+}
+
+/*              --------------------                  */ ;
