Added in hours to conversions

--- a/css/conversion.css
+++ b/css/conversion.css
@@ -96,4 +96,5 @@ input {
 .hidden {
   display: none;
 }
+/*                 responsive css                     */
 /*              --------------------                  */ ;
