--- a/css/bmi-converter.css
+++ b/css/bmi-converter.css
@@ -13,88 +13,192 @@ body {
   font-family: sans-serif;
   color: rgb(0, 0, 0);
   line-height: 1.5;
-  height: 100vh;
   position: relative;
+}
+
+/*        Responsive conversion table      */
+.Bmipage {
+  position: absolute;
+  height: 90vh;
+  top: 140%;
+  z-index: 1;
+  width: 60%;
+  background-color: rgb(255, 255, 255);
+  border: 1px solid rgba(0, 255, 234, 0.911);
+  border-radius: 50px;
+  box-shadow: 10px 50px 100px;
+}
+/*      Forms     */
+.c-form {
   display: flex;
-  align-items: flex-start;
-  justify-content: center;
-  background-color: whitesmoke;
-}
-.page {
-  position: absolute;
-  top: 5%;
-  width: 980px;
-  margin: 0 auto;
-}
-
-/*                   Top headers                      */
-.cform {
-  position: absolute;
-  top: 50px;
-  float: left;
-  margin-top: 20px;
   width: 100%;
+  height: 250px;
+  align-items: center;
+  justify-content: center;
 }
 
+.gender-form {
+  position: relative;
+  padding-top: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.height-form {
+  position: relative;
+  padding-top: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.weight-form {
+  padding-top: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.convert-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 img {
-  right: 105%;
-  height: 200px;
-  float: left;
+  height: 150px;
 }
 
-.cform h1 {
+.h1Message {
   font-size: 50px;
-  letter-spacing: 5px;
-  top: 50px;
 }
 
-#convert_form {
-  top: 12rem;
-  display: block;
-  margin-top: 20px;
+/*      Form placement      */
+
+.selecth2 {
+  font-size: 20px;
 }
 
-input {
-  outline: none;
+.fromspan,
+.to {
+  align-self: center;
+  font-size: 2rem;
+  margin: 0 5px;
 }
 
 #cnumber,
-#cfrom,
-#cto {
-  width: 150px;
-  margin-left: 10px;
-  margin-right: 10px;
-  height: 30px;
-  border-radius: 60px;
+#weight,
+#gender,
+#feet,
+#inches,
+#cto,
+#convertbtn {
+  height: 50px;
+  width: 700px;
   outline: none;
-}
-#cnumber {
+  margin: 20px 5px;
+  border-radius: 10px;
   text-align: center;
   letter-spacing: 3px;
 }
-
-.convertbtn {
-  letter-spacing: 3px;
-  width: 100px;
-  height: 30px;
-  border-radius: 60px;
-  outline: none;
-}
-.convertbtn:hover {
-  color: rgb(0, 0, 0);
+#convertbtn {
+  letter-spacing: 10px;
 }
 
+/*      Results    */
 .results {
-  width: 100%;
-  margin-top: 10px;
-  margin-right: 20px;
-  letter-spacing: 4px;
+  display: flex;
+  height: 80px;
+  width: 80%;
+  align-items: center;
+  justify-content: center;
   font-size: 25px;
-  padding: 0px, 0px;
-  color: black;
+  letter-spacing: 5px;
+  border: 2px solid grey;
+  margin: 10px auto;
 }
+
 .hidden {
   display: none;
 }
-/*                 responsive css                     */
-/*              --------------------                  */ ;
+
+/*      PAGE 2      */
+.page2 {
+  background-color: grey;
+  margin-top: 400px;
+  height: 15vh;
+  position: absolute;
+  width: 100%;
+}
+
+/*          Scroll bar          */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #000000;
+}
+::-webkit-scrollbar-thumb {
+  background: rgb(82, 78, 78);
+  border-radius: 50px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(255, 255, 255);
+}
+
+/* Media Queries */
+@media screen and (max-width: 1160px) {
+  .page {
+    top: 10%;
+    height: 100%;
+  }
+  .Bmipage {
+    top: 100%;
+  }
+  .h1Message {
+    font-size: 40px;
+  }
+  .c-form {
+    flex-direction: column;
+  }
+
+  .gender-form,
+  .height-form,
+  .convert-btn {
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .fromspan,
+  .to {
+    font-size: 20px;
+    font-weight: 800;
+    letter-spacing: 10px;
+    color: grey;
+    margin: 10px 20px;
+  }
+
+  #gender,
+  #weight,
+  #feet,
+  #inches,
+  #cto,
+  #convertbtn {
+    font-size: 20px;
+    width: 90%;
+    border-radius: 0px;
+    height: 50px;
+    margin: 10px 20px;
+    text-align: center;
+    border-radius: 10px;
+  }
+
+  .results {
+    text-align: center;
+    flex-direction: column;
+    justify-content: center;
+    padding: 60px 10px;
+    font-size: 20px;
+  }
+}
