--- a/css/landingpage.css
+++ b/css/landingpage.css
@@ -95,6 +95,7 @@ body {
   height: 80vh;
   margin-bottom: 20%;
   box-shadow: 10px 50px 100px;
+  animation: slide_up 1.1s ease;
 }
 
 /* Flex container */
@@ -229,5 +230,18 @@ li {
   }
   .welcome h1 {
     font-size: 40px;
+  }
+}
+
+/*        ANIMATIONS        */
+@keyframes slide_up {
+  0% {
+    transform: translateX(-1500px);
+  }
+  50% {
+    transform: translateX(50px);
+  }
+  100% {
+    transform: translateX(0px);
   }
 }
