--- a/css/responsive-converter.css
+++ b/css/responsive-converter.css
@@ -25,6 +25,7 @@ body {
   top: 10%;
   box-shadow: 10px 50px 100px;
   border-radius: 50px;
+  animation: slide_up 1.1s ease;
 }
 
 .cform {
@@ -100,6 +101,19 @@ img {
   top: 120%;
 }
 
+/*          Page info          */
+.page-convertinfo {
+  position: fixed;
+  display: flex;
+  z-index: 2;
+  border-radius: 40px;
+  height: 600px;
+  width: 350px;
+  background-color: rgb(0, 0, 0);
+  top: 10%;
+  left: 80px;
+}
+
 /*          Scroll bar          */
 ::-webkit-scrollbar {
   width: 10px;
@@ -166,5 +180,15 @@ img {
     justify-content: center;
     padding: 60px 10px;
     font-size: 20px;
+  }
+}
+
+/*        ANIMATIONS        */
+@keyframes slide_up {
+  0% {
+    transform: translateY(1500px);
+  }
+  100% {
+    transform: translateY(0);
   }
 }
