--- a/css/bmi-converter.css
+++ b/css/bmi-converter.css
@@ -18,78 +18,69 @@ body {
 
 .femaleGradient {
   background: linear-gradient(
-    270deg,
-    #fd06ff,
-    #d842d9,
-    #c649c6,
-    #a853a8,
-    #9f6c9f,
-    #877287,
-    #878787,
-    #585858,
-    #3f3c3f,
-    #4d314d,
-    #743774,
-    #943894,
-    #ae31ae,
-    #d020d0,
-    #e312e3,
-    #ff00ff,
-    #ff00ff
+    88deg,
+    #ff51da,
+    #ff35d4,
+    #f210c1,
+    #f009bc,
+    #ff46d5,
+    #ea5ac9,
+    #ff00d4,
+    #ff5fe4,
+    #fe5fff,
+    #b948b9,
+    #7f327f,
+    #522252,
+    #3f0f3f,
+    #6e1a6e,
+    #9f1e9f,
+    #d52ad5,
+    #ea28ea,
+    #f31ff3,
+    #f512f5,
+    #fb00fb,
+    #fb00fb
   );
-  background-size: 3400% 3400%;
+  background-size: 4200% 4200%;
 
-  -webkit-animation: femaleGradient 30s ease infinite;
-  -moz-animation: femaleGradient 30s ease infinite;
-  -o-animation: femaleGradient 30s ease infinite;
-  animation: femaleGradient 30s ease infinite;
-}
-
-@-webkit-keyframes femaleGradient {
-  0% {
-    background-position: 0% 51%;
-  }
-  50% {
-    background-position: 100% 50%;
-  }
-  100% {
-    background-position: 0% 51%;
-  }
-}
-@-moz-keyframes femaleGradient {
-  0% {
-    background-position: 0% 51%;
-  }
-  50% {
-    background-position: 100% 50%;
-  }
-  100% {
-    background-position: 0% 51%;
-  }
-}
-@-o-keyframes femaleGradient {
-  0% {
-    background-position: 0% 51%;
-  }
-  50% {
-    background-position: 100% 50%;
-  }
-  100% {
-    background-position: 0% 51%;
-  }
-}
-@keyframes femaleGradient {
-  0% {
-    background-position: 0% 51%;
-  }
-  50% {
-    background-position: 100% 50%;
-  }
-  100% {
-    background-position: 0% 51%;
-  }
+  -webkit-animation: AnimationName 30s ease infinite;
+  -moz-animation: AnimationName 30s ease infinite;
+  animation: AnimationName 30s ease infinite;
 }
 
+@-webkit-keyframes AnimationName {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+@-moz-keyframes AnimationName {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+@keyframes AnimationName {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
 .maleGradient {
   background: linear-gradient(
     270deg,
@@ -153,14 +144,13 @@ body {
 /*        Responsive conversion table      */
 .Bmipage {
   position: absolute;
-  height: 90vh;
-  top: 10%;
-  margin: 150px 0;
+  margin: 100px 0;
+  padding: 30px 0px;
   z-index: 1;
   width: 980px;
   background-color: rgb(255, 255, 255);
   /*background-color: #0d1117;*/
-  border: 1px solid rgba(0, 255, 234, 0.911);
+
   border-radius: 50px;
   box-shadow: 10px 50px 100px;
   animation: slide_up 1.1s ease;
@@ -176,27 +166,39 @@ body {
 
 .gender-form {
   position: relative;
-  padding-top: 30px;
+
   display: flex;
   align-items: center;
   justify-content: center;
+}
+h2.select-gender-h2 {
+  position: absolute;
+  align-self: center;
 }
 .height-form {
   position: relative;
+  padding: 30px 0px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  border: solid 1px #0d1117;
+}
+.weight-form {
   padding-top: 30px;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
 }
-.weight-form {
-  padding-top: 20px;
+.convert-form {
+  padding: 30px 0px;
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-direction: column;
 }
-.convert-btn {
+.convert-button {
+  padding: 30px 0px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -210,9 +212,14 @@ img {
 }
 
 /*      Form placement      */
-
-.selecth2 {
-  font-size: 20px;
+h2.select-gender-h2 {
+  align-self: center;
+}
+h2.select-height-h2,
+h2.select-weight-h2 {
+  align-self: center;
+  letter-spacing: 2px;
+  font-size: 25px;
 }
 
 .fromspan,
@@ -237,6 +244,7 @@ img {
   text-align: center;
   letter-spacing: 3px;
 }
+
 #convertbtn {
   letter-spacing: 10px;
 }
@@ -291,6 +299,8 @@ img {
   }
   .Bmipage {
     top: 100%;
+    width: 90%;
+    height: 100vh;
   }
   .h1Message {
     font-size: 40px;
