--- a/css/landingpage.css
+++ b/css/landingpage.css
@@ -17,6 +17,7 @@ body {
   display: flex;
   align-items: flex-start;
   justify-content: center;
+  font-family: "Overpass", sans-serif;
 }
 .landingpagebody {
   /* Gradient */
