--- a/css/responsive-converter.css
+++ b/css/responsive-converter.css
@@ -16,15 +16,21 @@ body {
   position: relative;
   background-color: white;
   height: 100vh;
+  font-family: "Overpass", sans-serif;
 }
 
 /*        Responsive conversion table      */
 .page {
   position: absolute;
-  height: 90vh;
-  top: 10%;
-  box-shadow: 10px 50px 100px;
+  margin: 100px 0;
+  padding: 30px 0px;
+  z-index: 1;
+  width: 980px;
+  background-color: rgb(255, 255, 255);
+  /*background-color: #0d1117;*/
+
   border-radius: 50px;
+  box-shadow: 10px 50px 100px;
   animation: slide_up 1.1s ease;
 }
 
@@ -45,17 +51,39 @@ img {
 }
 
 /*      Form placement      */
-.cformr {
+
+.input-form {
+  position: relative;
+  padding: 30px 0px;
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
+  border: solid 1px #0d1117;
 }
-
-.fromspan,
-.to {
-  align-self: center;
-  font-size: 2rem;
-  margin: 0 5px;
+.from-form {
+  position: relative;
+  padding: 30px 0px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  border: solid 1px #0d1117;
+}
+.to-form {
+  position: relative;
+  padding: 30px 0px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  border: solid 1px #0d1117;
+}
+.convert-button {
+  padding: 30px 0px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 #cnumber,
@@ -63,11 +91,11 @@ img {
 #cfrom,
 #cto,
 .convertbtn {
-  height: 30px;
-  width: 180px;
+  height: 50px;
+  width: 700px;
   outline: none;
-  margin: 0 5px;
-  border-radius: 60px;
+  margin: 20px 5px;
+  border-radius: 10px;
   text-align: center;
   letter-spacing: 3px;
 }
